{
  "sourceLanguage" : "en",
  "strings" : {
    "Cancel" : {

    },
    "Check your inbox" : {

    },
    "Check your connection and try again." : {

    },
    "Continue" : {

    },
    "Couldn't load your profile" : {

    },
    "Couldn't send the magic link. Please try again." : {

    },
    "Email" : {

    },
    "Feed" : {

    },
    "Find friends" : {

    },
    "Find friends or look up something you've watched." : {

    },
    "Find friends to see where your tastes overlap." : {

    },
    "Friends, movies, music…" : {

    },
    "in common" : {

    },
    "Loading…" : {

    },
    "Loading your feed…" : {

    },
    "Loading your profile…" : {

    },
    "No friends yet" : {

    },
    "Nothing here yet" : {

    },
    "Please enter a valid email address." : {

    },
    "Posts from people you follow will appear here." : {

    },
    "Profile" : {

    },
    "Search" : {

    },
    "Search venn" : {

    },
    "Sign out" : {

    },
    "Things you've logged" : {

    },
    "Try again" : {

    },
    "Use a different email" : {

    },
    "We sent a sign-in link to %@. Tap it to finish signing in." : {

    },
    "Where your tastes meet your friends'." : {

    },
    "You're signed in. The real home screen lands in the next PR." : {

    }
  },
  "version" : "1.0"
}
